# iceberg

./: .dockerignore  .git-revert  .gitignore  Dockerfile  README.md  entrypoint.sh  env  pyproject.toml  txoko_master (1).csv  txoko_pipeline_datos (1).ipynb
api/: api.py
model/: modelo_clustering.pkl  resultados_modelo2.json
notebooks/: CacharreoNaia.ipynb  MapeoNearby.ipynb  aupa_analisis.ipynb  eda_txoko.html  modelo_clustering.ipynb  modelo_clustering_andoni.ipynb  modelo_localscore.ipynb  txoko_enrichment_provenance.json  txoko_google_places.ipynb  txoko_google_reviews_enrichment.ipynb  txoko_master_enriched_v2.csv  txoko_pipeline_datos.ipynb
notebooks/chat/: ComprobacionDataMaster.ipynb  txoko_rag_chatbot_v2.ipynb  txoko_rag_explicacion_backend.ipynb
rag/: ComprobacionDataMaster.ipynb  aupa_master_v7.csv  check_gemini.py  list_models.py  test_faiss.py  txoko_rag_chatbot_v2.ipynb  txoko_rag_explicacion_backend.ipynb
rag/backend/: main.py
rag/backend/rag/: config.py  landmarks.py  pruebas.md  test_gemini.py
rag/old versions/: aupa_master_v5.csv  txoko_rag_chatbot.ipynb
rag/rag_assets/: faiss_metadata.json
src/: config.py  extract.py  load.py  models.py  transform.py  utils.py
src/api/: main.py
src/api/schemas/: api_schemas.py
src/api/service/: recomendation_service.py
src/app/: main.py
src/app/schemas/: api_schemas.py
src/chat/: ChatUI.html  ContextoChatbox.docx  build_faiss_index.py
src/chat/backend/: main.py  (+1 more)
src/db/: db.py  models.py
src/etl/: extract.py  load.py  pipeline.py  transform.py
src/inference/: inference.py
(+12 files in other folders)
