[project]
name = "iceberg"
version = "0.1.0"
description = "Pryecto Desafio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.5.20",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "geoalchemy2>=0.20.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.67.3",
    "uvicorn>=0.48.0",
]
